[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-builder-lib-runtime"
version = "0.1.0"
description = "Adobe App Builder Runtime SDK — compute & sandbox client for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
