[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app-builder-lib-runtime"
version = "0.1.0"
description = "Adobe Runtime SDK for python"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "websockets>=13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aio_runtime"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
